--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@types/node": "^18",
-    "nuxt": "^3.5.2"
+    "node-sass": "^9.0.0",
+    "nuxt": "^3.5.2",
+    "sass-loader": "^13.3.2"
   }
 }
