--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/google-fonts": "^3.0.1",
     "@types/node": "^18",
     "node-sass": "^9.0.0",
     "nuxt": "^3.5.2",
